Add support for CSS3 transforms.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 					var viewera = new useful.Viewer( document.getElementById('viewera'), {
 						'urlprefix' : '',
 						'imageslice' : 'inc/php/imageslice.php?src=../../{src}&left={left}&top={top}&right={right}&bottom={bottom}&width={width}&height={height}',
+						'transforms' : true,
 						'width' : '100',
 						'widthUnit' : '%',
 						'height' : '512',
@@ -106,7 +107,8 @@
 						<li><a href="./inc/img/panorama_11a.jpg"><img alt="" src="./inc/img/panorama_11.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>
 						<li><a href="./inc/img/panorama_12a.jpg"><img alt="" src="./inc/img/panorama_12.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>
 						<li><a href="./inc/img/panorama_13a.jpg"><img alt="" src="./inc/img/panorama_13.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>
-						<li><a href="./inc/img/panorama_14a.jpg"><img alt="" src="./inc/img/panorama_14.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>					
+						<li><a href="./inc/img/panorama_14a.jpg"><img alt="" src="./inc/img/panorama_14.jpg" data-left="0" data-top="0" data-right="1" data-bottom="1" width="1932" height="2576"/></a></li>
+					</ul>
 				</div>
 				<script src="./inc/js/useful-viewer.js"></script>
 				<script>
@@ -115,6 +117,7 @@
 					var viewerc = new useful.Viewer( document.getElementById('viewerc'), {
 						'urlprefix' : '',
 						'imageslice' : 'inc/php/imageslice.php?src=../../{src}&left={left}&top={top}&right={right}&bottom={bottom}&width={width}&height={height}',
+						'transforms' : true,
 						'width' : '100',
 						'widthUnit' : '%',
 						'height' : '610',
@@ -174,6 +177,7 @@
 					var viewerb = new useful.Viewer( document.getElementById('viewerb'), {
 						'urlprefix' : '',
 						'imageslice' : 'inc/php/imageslice.php?src=../../{src}&left={left}&top={top}&right={right}&bottom={bottom}&width={width}&height={height}',
+						'transforms' : true,
 						'width' : '100',
 						'widthUnit' : '%',
 						'height' : '512',
